# gRPCTemplate

./: .gitignore  CMakeLists.txt
src/: client.cpp
